--- a/index.ipynb
+++ b/index.ipynb
@@ -376,7 +376,7 @@
    },
    "outputs": [],
    "source": [
-    "city_count = None\n",
+    "city_count = count.ci\n",
     "city_count # 12"
    ]
   },
