--- a/index.ipynb
+++ b/index.ipynb
@@ -387,7 +387,7 @@
     }
    ],
    "source": [
-    "city_count = str(cities)\n",
+    "city_count = cities.\n",
     "city_count # 12"
    ]
   },
