Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,12 +400,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[7]['City'] = None\n",
-    "cities[7]['City'] # 'PyeongChang'"
+    "cities[7]['City']\n",
+    "city_count = len(cities)\n",
+    "city_count # 1"
    ]
   },
   {
