Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,13 +400,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': None, 'Country': 'South Korea', 'Population': 44, 'Area': 1464}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cities[7]['City']\n",
-    "city_count = len(cities)\n",
-    "city_count # 1"
+    "cities[7]\n"
    ]
   },
   {
