Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,22 +400,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': None, 'Country': 'South Korea', 'Population': 44, 'Area': 1464}"
+       "'Pyeongchang'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[7]['City']= Pyeongchang\n"
+    "cities[7]['City']= 'Pyeongchang'\n",
+    "cities[7]['City']"
    ]
   },
   {
