--- a/index.ipynb
+++ b/index.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "  'Country': 'Finland',\n",
        "  'Population': 60,\n",
        "  'Area': 2000},\n",
-       " {'City': 'Pyeongchang',\n",
+       " {'City': 'PyeongChang',\n",
        "  'Country': 'South Korea',\n",
        "  'Population': 44,\n",
        "  'Area': 1464},\n",
@@ -435,13 +435,13 @@
        "  'Area': 2396}]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[7]['City']= 'Pyeongchang'\n",
+    "cities[7]['City']= 'PyeongChang'\n",
     "cities[7]['City']\n",
     "cities"
    ]
